# sima

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.txt  attention_comparison.schema.json  attention_gate.schema.json  attention_schema.schema.json  belief_revision.schema.json  candidates.schema.json  docker-compose.yml  inner_monologue.schema.json  message.schema.json  metacog.schema.json  percept.schema.json  pyproject.toml  pytest.ini  sleep_digest.schema.json  workspace.schema.json
docs/: genesis.md  plan.md  senses.md  website_lab.md  website_public.md
infra/localstack/: init-aws.sh
infra/terraform/envs/sima/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/alb/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/ecr/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/ecs/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/eventbridge/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/rds/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/s3/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/secrets/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/sqs/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/vpc/: main.tf  outputs.tf  variables.tf
prompts/: attention_gate.yaml  attention_schema_ast.yaml  critic.yaml  inner_monologue.yaml  memory_retrieval.yaml  metacog_hot.yaml  perception_rpt.yaml  planner.yaml  sleep_consolidation.yaml  speaker.yaml  workspace_integrator.yaml
scripts/: dev_down.sh  dev_up.sh  run_perception.py  seed_demo_trace.py  seed_genesis.py  visualize_senses.py
services/api/: Dockerfile  Dockerfile.lambda  pyproject.toml
services/api/sima_api/: __init__.py  auth.py  main.py  settings.py  sqs.py  websocket.py
services/api/sima_api/routes/: __init__.py  admin.py  events.py  memories.py  metrics.py  traces.py  webhook.py
services/brain/: Dockerfile  pyproject.toml
services/brain/sima_brain/: __init__.py  awake_loop.py  persistence.py  prayer.py  settings.py  simulated_competition.py  worker.py
services/brain/sima_brain/senses/: __init__.py  breathing.py  collector.py  heartbeat.py  thought_burden.py  tiredness.py  weather.py
services/ingest-api/: Dockerfile  pyproject.toml
services/ingest-api/sima_ingest/: __init__.py  main.py  settings.py  sqs.py  webhook.py
services/orchestrator/: Dockerfile  pyproject.toml
services/orchestrator/sima_orchestrator/: __init__.py  awake_loop.py  module_runner.py  persistence.py  prayer.py  settings.py  telegram.py  worker.py
services/sleep/: Dockerfile  README.md  pyproject.toml
services/sleep/sima_sleep/: __init__.py  consolidation.py  main.py  memory_tier.py  settings.py  telegram.py
services/web/: Dockerfile  package-lock.json  package.json  tailwind.config.js
services/web/app/: layout.tsx
services/web/app/(lab)/: layout.tsx
services/web/app/(lab)/admin/: page.tsx
services/web/app/(lab)/dashboards/indicators/: page.tsx
services/web/app/(lab)/events/[eventId]/: page.tsx
services/web/app/(lab)/traces/: page.tsx
services/web/app/(lab)/traces/[traceId]/: page.tsx
services/web/app/(public)/: page.tsx
services/web/app/(public)/traces/[traceId]/: page.tsx
services/web/components/: EventCard.tsx  FourPanelLayout.tsx  IndicatorChart.tsx  MemoryPanel.tsx  StreamPanel.tsx  TraceTimeline.tsx
services/web/lib/: api.ts  types.ts  websocket.ts
services/web/styles/: globals.css
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_api.py  test_database.py  test_e2e_flow.py  test_llm_router.py  test_module_runner.py  test_senses_api.py  test_senses_worker_integration.py  test_sleep.py  test_websocket.py
tests/unit/: __init__.py  test_ast_comparison.py  test_belief_revision.py  test_core_types.py  test_senses.py  test_simulated_competition.py
