[project]
name = "sima"
version = "0.1.0"
description = "SIMA - Consciousness-inspired cognitive agent"
requires-python = ">=3.13"
readme = "README.txt"

[tool.uv]
managed = true

[tool.uv.workspace]
members = [
    "packages/sima-core",
    "packages/sima-llm",
    "packages/sima-prompts",
    "packages/sima-storage",
    "services/orchestrator",
    "services/ingest-api",
    "services/api",
]

[tool.uv.sources]
sima-core = { workspace = true }
sima-llm = { workspace = true }
sima-prompts = { workspace = true }
sima-storage = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]
