[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sima-orchestrator"
version = "0.1.0"
description = "SIMA Orchestrator - Cognitive loop service"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
keywords = ["sima", "orchestrator", "cognitive"]
authors = [
    { name = "SIMA Team" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "boto3>=1.28.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.0.0",
    "sima-core",
    "sima-llm[openai]",
    "sima-prompts",
    "sima-senses",
    "sima-storage",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
sima-worker = "sima_orchestrator.worker:main"

[tool.hatch.build.targets.wheel]
packages = ["sima_orchestrator"]
