[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sima-sleep"
version = "0.1.0"
description = "SIMA Sleep - Memory consolidation service"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
keywords = ["sima", "sleep", "memory", "consolidation"]
authors = [
    { name = "SIMA Team" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "httpx>=0.27.0",
    "pydantic-settings>=2.0.0",
    "sima-core",
    "sima-llm[openai]",
    "sima-prompts",
    "sima-storage",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
sima-sleep = "sima_sleep.main:main"

[tool.hatch.build.targets.wheel]
packages = ["sima_sleep"]
